Add global styles for header and responsive menu functionality

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,3 +73,124 @@ body{
     background-color: #331f1b;
 }
 /* End of global styles for login form*/
+
+/* Start of global styles for header*/
+.header-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.3rem;
+    border-bottom: #482922 .05rem solid;
+}
+.header-container a {
+    text-decoration: none;
+}
+.list-container {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    font-size: 1rem;
+    color: var(--primary-color);
+}
+
+.logo {
+    fill: var(--primary-color);
+    font-size: 2rem;
+}
+.icono-user {
+    width: 35px;
+    height: 35px;
+}
+
+.menu-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: none;
+    z-index: 1100;
+}
+
+.hamburger-icon line {
+    stroke: #482922;
+    stroke-width: 3;
+}
+
+.user-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: none;
+    z-index: 1100;
+}
+
+.user-dropdown button {
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+
+/* Estilos para el menú en pantallas pequeñas */
+@media (max-width: 768px) {
+    .header-container {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        position: sticky;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    .list-container {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 6rem;
+        width: 100%;
+        background-color: white; 
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
+    }
+    .list-container.show {
+        display: flex;
+    }
+    .list-container li {
+        margin: 1rem 0;
+    }
+    .list-container a {
+        text-decoration: none;
+        color: var(--primary-color);
+        font-size: 1.5rem;
+    }
+
+    .user-toggle {
+        display: block;
+    }
+
+    .user-dropdown {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 6rem;
+        width: 100%;
+        background-color: white; 
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
+    }
+
+    .user-dropdown.show {
+        display: flex;
+    }
+}
+/* End of global styles for header*/
+
