--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@ body{
     font-family: 'Poppins', sans-serif;
     color: var(--primary-color);
 }
+
 /* Start of global styles for register form*/
 .form-container {
     display: flex;
@@ -14,6 +15,10 @@ body{
     align-items: center;
     min-height: 100vh;
 }
+.form-container a{
+    text-decoration: none;
+    color: var(--primary-color);
+}
 .form-register {
     display: flex;
     flex-wrap: wrap;
@@ -21,6 +26,11 @@ body{
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.form-register a{
+    text-decoration: none;
+    color: var(--primary-color);
 }
 
 .form-register input {
@@ -85,6 +95,7 @@ body{
 }
 .header-container a {
     text-decoration: none;
+    color: var(--primary-color);
 }
 .list-container {
     list-style: none;
@@ -133,6 +144,10 @@ body{
     cursor: pointer;
 }
 
+.user-dropdown a {
+    text-decoration: none;
+    color: white;
+}
 
 /* Estilos para el menú en pantallas pequeñas */
 @media (max-width: 768px) {
