--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -209,3 +209,92 @@ body{
 }
 /* End of global styles for header*/
 
+/* Start of global styles for home*/
+.home-img {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    z-index: 2;
+    position: relative;
+}
+
+.home-h1-1 {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    color: var(--primary-color);
+    
+}
+.home-h1-2 {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    color: var(--primary-color);
+    
+}
+
+.home-img img {
+    width: 50%;
+    height: 50%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+@media (max-width: 768px) {
+    .home-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    z-index: 2;
+    position: relative;
+    }
+    .home-h1-1 {
+    z-index: 1;
+    position: absolute;
+    top: 10%;
+    left: 70%;
+    color: var(--primary-color);
+    
+    }
+    .home-h1-2 {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    color: var(--primary-color);
+    }
+    .home-img img {
+    width: 100%;
+    height: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    }
+}
+/* End of global styles for home*/
+
+/* Start of global styles for footer*/
+.footer a {
+    text-decoration: none;
+}
+
+.footer {
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer p{
+    font-size: .7rem;
+    margin-top: 0.8rem;
+}
+
+@media (max-width: 768px) {
+    .footer {
+        border-top: 1px solid var(--primary-color);
+        margin-top: 10px;
+    }
+}
+/* End of global styles for footer*/
