--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -765,6 +765,26 @@ td {
 .lastp{
     border-bottom: #331f1b solid 2px;
 }
+
+@media (max-width: 1920px),(max-height: 1080px) {
+    .MainStoreImg img {
+        width: 1600px;
+        height: auto;
+    }
+}
+
+@media (max-width: 900px) {
+    .MainStoreImg img {
+        width: 100%;
+        height: auto;
+    }
+    .Mainh1 {
+        font-size: 2rem;
+    }
+    .StoreContainer {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+}
 /* End of global styles for Stores*/
 
 .collectionsContainer {
@@ -786,12 +806,22 @@ td {
     letter-spacing: 0.15em;
 }
 
-@media (max-width: 1920px) {
+@media (min-width: 1028px),(min-height: 1080px),(max-width:1920px) {
+.collections-title {
+    font-size: 10rem;
+}
+.collectionsContainer img {
+    width: 30%;
+    height: auto;
+}
+}
+
+@media (max-width: 900px) {
     .collections-title {
-        font-size: 4rem;
+        font-size: 3rem;
     }
     .collectionsContainer img {
-        width: 70%;
+        width: 100%;
         height: auto;
     }
 }
