Add global styles for collections: define layout and responsive behavior

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -786,7 +786,7 @@ td {
     }
 }
 /* End of global styles for Stores*/
-
+/* Start of global styles for Collections*/
 .collectionsContainer {
     display: flex;
     flex-wrap: wrap;
@@ -825,3 +825,4 @@ td {
         height: auto;
     }
 }
+/* End of global styles for Collections*/
